@@ -26,9 +26,54 @@
     <webjars-jquery-ui.version>1.11.4</webjars-jquery-ui.version>
     <webjars-jquery.version>2.2.4</webjars-jquery.version>
     <wro4j.version>1.8.0</wro4j.version>
+    <sonar.core.codeCoveragePlugin>cobertura</sonar.core.codeCoveragePlugin>
+    <sonar.java.coveragePlugin>cobertura</sonar.java.coveragePlugin>
+    <sonar.junit.reportsPath>${project.basedir}/target/surefire-reports</sonar.junit.reportsPath>
+    <sonar.surefire.reportsPath>${project.basedir}/target/surefire-reports</sonar.surefire.reportsPath>
+    <sonar.cobertura.reportPath>${project.basedir}/target/site/cobertura/coverage.xml</sonar.cobertura.reportPath>
 
     <cobertura.version>2.7</cobertura.version>
-
+      <!--  This format is used by SonarQube. If you need another format see "buildnumber-maven-plugin" -->
+      <maven.build.timestamp.format>MM.yyyy</maven.build.timestamp.format>
+      <yearMonth>${maven.build.timestamp}</yearMonth>
+      <!-- ************************-->
+      <!-- Sonar/Reporting settings -->
+      <!-- ************************-->
+      <!-- Sonar/Jacoco integration. Note that these properties need to be defined outside the "coverage" profile
+      because we want to be to able to execute mvn sonar:sonar without passing a profile -->
+      <!-- Tells Sonar to use jacoco for coverage results -->
+      <sonar.projectKey>MyProjectKey</sonar.projectKey>
+      <sonar.projectName>My Project</sonar.projectName>
+      <sonar.projectVersion>${yearMonth}</sonar.projectVersion>
+      <sonar.language>java</sonar.language>
+      <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
+      <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+      <!-- Jacoco version to use -->
+      <jacoco.version>0.7.2.201409121644</jacoco.version>
+      <!-- The Sonar Jacoco Listener for JUnit to extract coverage details per test -->
+      <sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
+      <!-- Don't let Sonar execute tests. We will ask it to Maven 'sonar.dynamicAnalysis' is deprecated since version 4.3 and should no longer be used. -->
+      <!-- <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis> -->
+      <!-- The system property jacoco.outputDir needs to be override on the command line
+          with an absolute path if you want to merge results from all modules.
+          Example in a Jenkisn build where ${WORKSPACE} is defined and your project in the root directory of the workspace :
+          mvn clean install -Prun-its,coverage -Djacoco.outputDir=${WORKSPACE}/target
+          Note that unfortunately using the following does not work because of
+          http://jira.codehaus.org/browse/SONAR-3427:
+      <jacoco.outputDir>${session.executionRootDirectory}/target/</jacoco.outputDir>
+      -->
+      <jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
+      <!-- Jacoco output file for UTs -->
+      <jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
+      <!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
+      <sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
+      <!-- Jacoco output file for ITs -->
+      <jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
+      <!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
+      <sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
+      <!-- <sonar.junit.reportsPath>${project.build.directory}/surefire-reports/</sonar.junit.reportsPath> -->
+      <!-- <sonar.tests>src/test/java</sonar.tests> -->
+      <!-- === END of Sonar/Reporting settings === -->
   </properties>
 
   <dependencies>
@@ -108,10 +153,86 @@
       <artifactId>spring-boot-devtools</artifactId>
       <scope>runtime</scope>
     </dependency>
+      <dependency>
+          <groupId>org.codehaus.sonar-plugins.java</groupId>
+          <artifactId>sonar-jacoco-listeners</artifactId>
+          <version>${sonar-jacoco-listeners.version}</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
     <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <argLine>${jacoco.agent.ut.arg}</argLine>
+                <!-- Specific to generate mapping between tests and covered code -->
+                <properties>
+                    <property>
+                        <name>listener</name>
+                        <value>org.sonar.java.jacoco.JUnitListener</value>
+                    </property>
+                </properties>
+                <!-- test failure ignore -->
+                <testFailureIgnore>true</testFailureIgnore>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+                <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
+                </argLine>
+                <!-- Specific to generate mapping between tests and covered code -->
+                <properties>
+                    <property>
+                        <name>listener</name>
+                        <value>org.sonar.java.jacoco.JUnitListener</value>
+                    </property>
+                </properties>
+                <!-- Let's put failsafe reports with surefire to have access to tests
+                    failures/success reports in sonar -->
+                <reportsDirectory>${project.build.directory}/surefire-reports
+                </reportsDirectory>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>${jacoco.version}</version>
+            <executions>
+                <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info
+                    to be passed to the JVM hosting the code being tested. -->
+                <execution>
+                    <id>prepare-ut-agent</id>
+                    <phase>process-test-classes</phase>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                    <configuration>
+                        <destFile>${sonar.jacoco.reportPath}</destFile>
+                        <propertyName>jacoco.agent.ut.arg</propertyName>
+                        <append>true</append>
+                    </configuration>
+                </execution>
+                <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info
+                    to be passed to the JVM hosting the code being tested. -->
+                <execution>
+                    <id>prepare-it-agent</id>
+                    <phase>pre-integration-test</phase>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                    <configuration>
+                        <destFile>${sonar.jacoco.itReportPath}</destFile>
+                        <propertyName>jacoco.agent.it.arg</propertyName>
+                        <append>true</append>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
@@ -133,23 +254,40 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>${cobertura.version}</version>
-        <configuration>
-          <check />
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>clean</goal>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.7</version>
+            <configuration>
+                <instrumentation>
+                    <includes>
+                        <include>**/*.class</include>
+                    </includes>
+                </instrumentation>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>clean</id>
+                    <phase>pre-site</phase>
+                    <goals>
+                        <goal>clean</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>instrument</id>
+                    <phase>site</phase>
+                    <goals>
+                        <goal>instrument</goal>
+                        <goal>cobertura</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.0.2</version>
+        </plugin>
       <!-- Spring Boot Actuator displays build-related information if a git.properties
         file is present at the classpath -->
       <plugin>
@@ -199,6 +337,7 @@
           </dependency>
         </dependencies>
       </plugin>
+
     </plugins>
   </build>
   <reporting>
@@ -210,7 +349,7 @@
         <version>${cobertura.version}</version>
         <configuration>
           <formats>
-            <format>html</format>
+              <format>xml</format>
           </formats>
           <check />
         </configuration>
@@ -225,5 +364,117 @@
       <url>http://www.apache.org/licenses/LICENSE-2.0</url>
     </license>
   </licenses>
-
+    <profile>
+        <id>coverage</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>${jacoco.agent.ut.arg}</argLine>
+                        <!-- Specific to generate mapping between tests and covered code -->
+                        <properties>
+                            <property>
+                                <name>listener</name>
+                                <value>org.sonar.java.jacoco.JUnitListener</value>
+                            </property>
+                        </properties>
+                        <!-- test failure ignore -->
+                        <testFailureIgnore>true</testFailureIgnore>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
+                        </argLine>
+                        <!-- Specific to generate mapping between tests and covered code -->
+                        <properties>
+                            <property>
+                                <name>listener</name>
+                                <value>org.sonar.java.jacoco.JUnitListener</value>
+                            </property>
+                        </properties>
+                        <!-- Let's put failsafe reports with surefire to have access to tests
+                            failures/success reports in sonar -->
+                        <reportsDirectory>${project.build.directory}/surefire-reports
+                        </reportsDirectory>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.version}</version>
+                    <executions>
+                        <!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info
+                            to be passed to the JVM hosting the code being tested. -->
+                        <execution>
+                            <id>prepare-ut-agent</id>
+                            <phase>process-test-classes</phase>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <configuration>
+                                <destFile>${sonar.jacoco.reportPath}</destFile>
+                                <propertyName>jacoco.agent.ut.arg</propertyName>
+                                <append>true</append>
+                            </configuration>
+                        </execution>
+                        <!-- Prepares a variable, jacoco.agent.it.arg, that contains the info
+                            to be passed to the JVM hosting the code being tested. -->
+                        <execution>
+                            <id>prepare-it-agent</id>
+                            <phase>pre-integration-test</phase>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <configuration>
+                                <destFile>${sonar.jacoco.itReportPath}</destFile>
+                                <propertyName>jacoco.agent.it.arg</propertyName>
+                                <append>true</append>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+        <dependencies>
+            <dependency>
+                <groupId>org.codehaus.sonar-plugins.java</groupId>
+                <artifactId>sonar-jacoco-listeners</artifactId>
+                <version>${sonar-jacoco-listeners.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </profile>
+    <!-- Integraton tests -->
+    <profile>
+        <id>run-its</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>integration-test</id>
+                            <phase>integration-test</phase>
+                            <goals>
+                                <goal>integration-test</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>verify</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>verify</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
 </project>
